<resources>
    <string name="app_name">BiGBeD Pharmacie</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="m_moriser">Mémoriser</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="connexion">Se connecter</string>
    <string name="privacy">Politique de confidentialité</string>
    <string name="s_inscrire">Inscrire</string>
    <string name="espace_client">Espace client</string>
    <string name="d_j_inscrire">Déjà inscrit ?</string>
    <string name="se_connecter">Se connecter</string>
    <string name="espace_pharmacie">Espace Pharmacie</string>
    <string name="bienvenu">Bienvenue</string>
    <string name="nom">Nom</string>
    <string name="Tele">Numéro de téléphone</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="valider">Valider</string>
    <string name="ville">Ville</string>
    <string name="longitude" translatable="false">Longitude</string>
    <string name="latitude" translatable="false">Latitude</string>
    <string name="email_empty">Entrez votre Email !</string>
    <string name="email_error">Email est invalide !</string>
    <string name="name_empty">Entrez votre nom !</string>
    <string name="tel_empty">Entrez votre N° Téléphone</string>
    <string name="password_empty">Entrez votre mot de passe !</string>
    <string name="password_incorect">Confirmer le mot de passe</string>
    <string name="password_small">"Mot de passe est faible ! "</string>
    <string name="userCreate">Inscription réussite</string>
    <string name="latitude_empty">Entrer latitude</string>
    <string name="longitude_empty">Entrer longitude</string>
    <string name="ville_empty">Entrer la ville</string>
    <string name="message_error_auth">Email ou mot de passe est incorrect ! </string>
    <string name="entrer_votre_email">Entrer votre Email</string>
    <string name="avoir_un_nouveau_mot_de_passe">Entrer votre Email pour un nouveau mot de passe</string>
    <string name="envoyer">Envoyer</string>
    <string name="language">Langue</string>
    <string name="qui_somme_nous">"À propos de nous "</string>
    <string name="ajouter_un_service">Ajouter un service</string>
    <string name="status">Statut</string>
    <string name="description">Description ...</string>
    <string name="ajouter">Ajouter</string>
    <string name="service_ajouter">La service est ajouter avec succée</string>
    <string name="medicament_ajouter">Le Medicament est ajouter avec succée</string>
    <string name="medicamen_empty">Entrer le nom de medicament</string>
    <string name="Description_empty">Entrer la description</string>
    <string name="service_empty">Entrer le nom du service</string>
    <string name="fermer">Fermé</string>
    <string name="ouvert">Ouvert</string>
    <string name="message_pour_pharmacie">S\'il vous plait n\'oublier pas de cliquer sur fermée lorsque la pharmacie n\'est pas disponible !</string>
    <string name="merci">Merci.</string>
    <string name="l_agence_est_fermer">La pharmacie est fermée à ce moment</string>
    <string name="l_agence_est_ouvert">La pharmacie est ouvert à ce moment</string>
    <string name="ajouter_un_m_dicament">Ajouter un médicament</string>
    <string name="message_update">Votre status est en mise à jour</string>
    <string name="navigation_drawer_open">"Ouvrir le tiroir de navigation "</string>
    <string name="navigation_drawer_close">Ouvrir le tiroir de navigation </string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">En-tête de navigation </string>
    <string name="log_out">Se déconnecter</string>
    <string name="profile">Profil</string>
    <string name="help">Aidez-moi </string>
    <string name="share">Partager</string>
    <string name="active">Ouverte</string>
    <string name="inactive">Fermée</string>
    <string name="title_activity_main2">Profile client</string>
    <string name="action_settings">Paramètres</string>
    <string name="menu_home">Accueil</string>
    <string name="search_for_medicament">Rechercher un médicament</string>
    <string name="service_d_assistance">Si vous avez besoin d\'aide, contactez notre service d\'assistance</string>
    <string name="tele">0622505912</string>
    <string name="verify_your_email">verifiez votre Email address</string>
    <string name="email_invalid">address email est invalid</string>
    <string name="error">Erreur !!</string>
    <string name="medicament">Medicament</string>
    <string name="service">Service</string>
    <string name="bienautentifi">Bien authentifie</string>
    <string name="latitudedisplay">Latitude :</string>
    <string name="longitudedesplay">Longitude :</string>
    <string name="update_service_and_medicament">mettre à jour un Medicament</string>
    <string name="update_profile">Mis à jour</string>
    <string name="nomdisplay">Nom :</string>
    <string name="telephonedesplay">Telephone :</string>
    <string name="villedesplay">Ville :</string>
    <string name="emaildesplay">Email :</string>
    <string name="update">Mis à jour</string>
    <string name="update_profile_message">Votre profile est mis à jour avec succée</string>
    <string name="update_profile_message_error">Erreur !!</string>
    <string name="are_you_sure">Êtes-vous sûr de vouloir supprimer ceci</string>
    <string name="deleting_is">vous ne récupérerez pas ces données après la suppression</string>
    <string name="yes">Oui</string>
    <string name="deleting">Suppression</string>
    <string name="no">Non</string>
    <string name="there_no_item">Il n\'y a pas d\'itme lié à votre recherche</string>
    <string name="url_privacy">https://sites.google.com/view/bigbedpharmacy/home</string>


</resources>