<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homeC"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_helpC"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_languageC"
            android:icon="@drawable/ic_language"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_shareC"
            android:icon="@drawable/ic_share"
            android:title="@string/share"/>
    </group>
    <item android:title="@string/log_out"
        android:id="@+id/log_out_actionC"
        android:icon="@drawable/ic_logout"
        />
</menu>