<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="143dp"
        android:layout_height="142dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo"
        android:padding="8dp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/logoemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/emailicon" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:ems="13"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/logopass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/passwordicon" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:ems="13"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="28dp"
            android:layout_weight="1"
            android:text="@string/m_moriser"
            android:textSize="14sp"
            android:layout_marginStart="28dp" />
        <TextView
            android:id="@+id/passwordForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginTop="2dp"
            android:text="@string/mot_de_passe_oubli"
            android:textColor="@color/text"
            android:layout_marginLeft="50dp"
            android:textSize="12sp"
            android:layout_marginStart="50dp" />
    </LinearLayout>
    <TextView
        android:id="@+id/connexionB"
        android:layout_width="137dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/connexion"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_gravity="right"
         />
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textColor="#011302"
            android:textSize="13sp"
            android:textStyle="italic"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/inscrire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/s_inscrire"
            android:textColor="#046009"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>



</RelativeLayout>