<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".EspaceActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="143dp"
            android:layout_height="142dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:padding="8dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/Espace_client"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/espace_client"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/Espace_pharmacie"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/espace_pharmacie"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/d_j_inscrire"
            android:textSize="13sp"
            android:textColor="#011302"
            />
        <TextView
            android:id="@+id/ESe_connecter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/text"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/se_connecter"/>
    </LinearLayout>
</RelativeLayout>