<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    tools:context=".pharmacie.updatProfile">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:gravity="center"
            android:background="@drawable/button_background"
            android:text="@string/update_profile"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:background="@drawable/pipsearch"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/nomdisplay"
                />
            <EditText
                android:id="@+id/namp"
                android:layout_width="wrap_content"
                android:ems="14"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:background="@drawable/pipsearch"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/emaildesplay"
                />
            <EditText
                android:id="@+id/emailp"
                android:layout_width="wrap_content"
                android:ems="14"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:background="@drawable/pipsearch"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/telephonedesplay"
                />
            <EditText
                android:id="@+id/telep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:background="@drawable/pipsearch"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/villedesplay"
                />
            <EditText
                android:id="@+id/villep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"

                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:background="@drawable/pipsearch"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/latitudedisplay"
                />
            <EditText
                android:id="@+id/latip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"

                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:background="@drawable/pipsearch"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/longitudedesplay"
                />
            <EditText
                android:id="@+id/longp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:ems="14"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/update"
            android:layout_marginTop="20dp"
            android:layout_width="137dp"
            android:layout_height="43dp"
            android:text="@string/update"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="@drawable/button_background"/>

</LinearLayout>